--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,47 @@
+# Dependencies
 node_modules
+.pnp
+.pnp.js
+
+# Testing
+coverage
+
+# Production
 dist
-.DS_Store
+build
 server/public
+
+# Development
+*.local
+.env
+.env.*
+!.env.example
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+*.log
+
+# TypeScript
+*.tsbuildinfo
 vite.config.ts.*
 *.tar.gz
+
+# Debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# Replit specific
+.replit/
+.breakpoints
+replit.nix
+.config/
