Assistant checkpoint: Fix serverless function 500 error with improved handling
Assistant generated file changes:
- vercel/api/index.ts: Improve Vercel serverless handler with better error handling
- server/storage.ts: Improve database connection handling for serverless
- server/routes.ts: Add better error handling to routes
- vercel.json: Update Vercel configuration with better routes
- vercel/api/debug.ts: Add a debug endpoint for troubleshooting

---

User prompt:

This Serverless Function has crashed.

Your connection is working correctly.

Vercel is working correctly.

500: INTERNAL_SERVER_ERROR
Code: FUNCTION_INVOCATION_FAILED
ID: bom1::c2lfx-1740725700291-c8988b872179

If you are a visitor, contact the website owner or try again later.
If you are the owner, learn how to fix the error and check the logs.

--- a/vercel.json
+++ b/vercel.json
@@ -3,8 +3,11 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/index.ts",
-      "use": "@vercel/node"
+      "src": "vercel/api/index.ts",
+      "use": "@vercel/node",
+      "config": {
+        "includeFiles": ["server/**", "shared/**"]
+      }
     },
     {
       "src": "package.json",
@@ -16,8 +19,12 @@
   ],
   "routes": [
     {
+      "src": "/api/healthcheck",
+      "dest": "vercel/api/index.ts"
+    },
+    {
       "src": "/api/(.*)",
-      "dest": "api/index.ts"
+      "dest": "vercel/api/index.ts"
     },
     {
       "src": "/(assets|images|fonts)/.*",
@@ -25,9 +32,8 @@
       "dest": "/dist/public/$0"
     },
     {
-      "src": "/(.*)",
-      "dest": "/dist/public/$1",
-      "continue": true
+      "src": "/(.*\\.(js|css|ico|png|jpg|svg))",
+      "dest": "/dist/public/$1"
     },
     {
       "src": "/(.*)",
