Assistant checkpoint: Fixed Vercel deployment import path issues
Assistant generated file changes:
- vercel/api/index.ts: Fix import paths for schema
- vercel.json: Improve file path inclusion for Vercel
- vercel/api/ping.ts: Add simple ping endpoint for testing

---

User prompt:

you have made the required changes?

--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
       "src": "vercel/api/index.ts",
       "use": "@vercel/node",
       "config": {
-        "includeFiles": ["server/**", "shared/**", "*.ts", "db.ts", "drizzle.config.ts"]
+        "includeFiles": ["server/**", "shared/**", "*.ts", "db.ts", "drizzle.config.ts", "shared/schema.ts"]
       }
     },
     {
