Assistant checkpoint: Fixed Vercel deployment path resolution issues
Assistant generated file changes:
- vercel/api/healthcheck.ts: Create standalone healthcheck endpoint
- vercel/api/ping.ts: Create simple ping endpoint
- vercel/api/index.ts: Simplify Vercel API handler
- vercel.json: Improve file inclusion config, Update routes configuration

---

User prompt:

Error [ERR_MODULE_NOT_FOUND]: Cannot find module '/var/task/server/routes' imported from /var/task/vercel/api/index.js
    at finalizeResolution (node:internal/modules/esm/resolve:263:11)
    at moduleResolve (node:internal/modules/esm/resolve:919:10)
    at moduleResolveWithNodePath (node:internal/modules/esm/resolve:1043:14)
    at defaultResolve (node:internal/modules/esm/resolve:1086:79)
    at ModuleLoader.defaultResolve (node:internal/modules/esm/loader:650:12)
    at #cachedDefaultResolve (node:internal/modules/esm/loader:599:25)
    at ModuleLoader.resolve (node:internal/modules/esm/loader:582:38)
    at ModuleLoader.getModuleJobForImport (node:internal/modules/esm/loader:241:38)
    at ModuleJob._link (node:internal/modules/esm/module_job:132:49) {
  code: 'ERR_MODULE_NOT_FOUND',
  url: 'file:///var/task/server/routes'
}
Node.js process exited with exit status: 1. The logs above can help with debugging the issue. 🔍 Checking GET https://mammothzy-git-main-kartikeyas-xs-projects.vercel.app/api/ping
📊 Status: 500 Internal Server Error
📄 Response (Text): A server error has occurred

FUNCTION_INVOCATION_FAILED

bom1::9vnfl-1740730703609-ea874ab03a93

--- a/vercel.json
+++ b/vercel.json
@@ -3,11 +3,8 @@
   "version": 2,
   "builds": [
     {
-      "src": "vercel/api/index.ts",
-      "use": "@vercel/node",
-      "config": {
-        "includeFiles": ["server/**", "shared/**", "*.ts", "db.ts", "drizzle.config.ts", "shared/schema.ts"]
-      }
+      "src": "vercel/api/*.ts",
+      "use": "@vercel/node"
     },
     {
       "src": "package.json",
@@ -20,7 +17,11 @@
   "routes": [
     {
       "src": "/api/healthcheck",
-      "dest": "vercel/api/index.ts"
+      "dest": "vercel/api/healthcheck.ts"
+    },
+    {
+      "src": "/api/ping",
+      "dest": "vercel/api/ping.ts"
     },
     {
       "src": "/api/(.*)",
