Assistant checkpoint: Fixed Vercel API endpoints and improved error handling
Assistant generated file changes:
- vercel/api/ping.ts: Fix ping endpoint
- vercel/api/debug-db.ts: Create robust debug endpoint
- vercel/api/healthcheck.ts: Improve error handling in healthcheck
- vercel.json: Improve Vercel configuration
- vercel/api/index.ts: Add proper TypeScript types and improve error handling

---

User prompt:

why is the issue not getting fixed please look into all the codes and find the issue

--- a/vercel.json
+++ b/vercel.json
@@ -16,12 +16,16 @@
   ],
   "routes": [
     {
+      "src": "/api/ping",
+      "dest": "vercel/api/ping.ts"
+    },
+    {
       "src": "/api/healthcheck",
       "dest": "vercel/api/healthcheck.ts"
     },
     {
-      "src": "/api/ping",
-      "dest": "vercel/api/ping.ts"
+      "src": "/api/debug-db",
+      "dest": "vercel/api/debug-db.ts"
     },
     {
       "src": "/api/(.*)",
