Assistant checkpoint: Fixed Vercel API handlers and configuration
Assistant generated file changes:
- vercel/api/ping.ts: Create a reliable ping endpoint
- vercel/api/index.ts: Fix Vercel API handler for serverless environment
- vercel/api/healthcheck.ts: Create a reliable healthcheck endpoint
- vercel.json: Simplify and fix Vercel configuration
- vercel/api/debug-db.ts: Create a database debugging endpoint
- check-endpoint.js: Create an endpoint checker script

---

User prompt:

build logs: Running build in Washington, D.C., USA (East) – iad1
Cloning github.com/kartikeyas-x/mammothzy (Branch: main, Commit: d62d648)
Cloning completed: 343.000ms
Restored build cache from previous deployment (7MMpwBBresErUiPA89M9X3Q9kwMw)
Running "vercel build"
Vercel CLI 41.2.2
WARN! Due to `builds` existing in your configuration file, the Build and Development Settings defined in your Project Settings will not apply. Learn More: https://vercel.link/unused-build-settings
Installing dependencies...
up to date in 2s
73 packages are looking for funding
  run `npm fund` for details
Running "npm run build"
> rest-express@1.0.0 build
> vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist
vite v5.4.14 building for production...
transforming...
✓ 2165 modules transformed.
rendering chunks... index-DthaFJA1.js:48

           POST https://mammothzy-navy.vercel.app/api/activities 504 (Gateway Timeout)
xO @ index-DthaFJA1.js:48
o @ index-DthaFJA1.js:190
(anonymous) @ index-DthaFJA1.js:138
await in (anonymous)
PR @ index-DthaFJA1.js:37
ER @ index-DthaFJA1.js:37
kR @ index-DthaFJA1.js:37
Ig @ index-DthaFJA1.js:37
OC @ index-DthaFJA1.js:37
(anonymous) @ index-DthaFJA1.js:37
Dp @ index-DthaFJA1.js:40
sC @ index-DthaFJA1.js:37
pd @ index-DthaFJA1.js:37
op @ index-DthaFJA1.js:37
WR @ index-DthaFJA1.js:37Understand this errorAI
4mammothzy-navy.vercel.app/:1 Uncaught (in promise) Error: A listener indicated an asynchronous response by returning t

--- a/vercel.json
+++ b/vercel.json
@@ -28,6 +28,11 @@
       "dest": "vercel/api/debug-db.ts"
     },
     {
+      "src": "/api/activities",
+      "methods": ["GET", "POST"],
+      "dest": "vercel/api/index.ts"
+    },
+    {
       "src": "/api/(.*)",
       "dest": "vercel/api/index.ts"
     },
@@ -44,8 +49,5 @@
       "src": "/(.*)",
       "dest": "/dist/public/index.html"
     }
-  ],
-  "env": {
-    "NODE_ENV": "production"
-  }
+  ]
 }
