--- a/vercel.json
+++ b/vercel.json
@@ -1,53 +1,11 @@
-
 {
-  "version": 2,
-  "builds": [
+  "buildCommand": "npm install -g vite && npm run build",
+  "outputDirectory": "dist",
+  "framework": "vite",
+  "rewrites": [
     {
-      "src": "vercel/api/*.ts",
-      "use": "@vercel/node"
-    },
-    {
-      "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist/public"
-      }
-    }
-  ],
-  "routes": [
-    {
-      "src": "/api/ping",
-      "dest": "vercel/api/ping.ts"
-    },
-    {
-      "src": "/api/healthcheck",
-      "dest": "vercel/api/healthcheck.ts"
-    },
-    {
-      "src": "/api/debug-db",
-      "dest": "vercel/api/debug-db.ts"
-    },
-    {
-      "src": "/api/activities",
-      "methods": ["GET", "POST"],
-      "dest": "vercel/api/index.ts"
-    },
-    {
-      "src": "/api/(.*)",
-      "dest": "vercel/api/index.ts"
-    },
-    {
-      "src": "/(assets|images|fonts)/.*",
-      "headers": { "cache-control": "public, max-age=31536000, immutable" },
-      "dest": "/dist/public/$0"
-    },
-    {
-      "src": "/(.*\\.(js|css|ico|png|jpg|svg))",
-      "dest": "/dist/public/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/dist/public/index.html"
+      "source": "/(.*)",
+      "destination": "/api"
     }
   ]
 }
