--- a/vercel.json
+++ b/vercel.json
@@ -1,23 +1,19 @@
 
 {
   "version": 2,
-  "buildCommand": "npm run build",
+  "buildCommand": "npm install && npm run build",
+  "installCommand": "npm install",
   "outputDirectory": "dist",
-  "framework": null,
   "functions": {
     "vercel/api/*.ts": {
       "memory": 1024,
       "maxDuration": 10
     }
   },
-  "rewrites": [
-    {
-      "source": "/api/(.*)",
-      "destination": "/api/$1"
-    },
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
-    }
+  "routes": [
+    { "src": "/api/healthcheck", "dest": "/vercel/api/healthcheck.ts" },
+    { "src": "/api/debug-db", "dest": "/vercel/api/debug-db.ts" },
+    { "src": "/api/(.*)", "dest": "/vercel/api/index.ts" },
+    { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
