--- a/vercel.json
+++ b/vercel.json
@@ -4,16 +4,13 @@
   "buildCommand": "npm install && npm run build",
   "installCommand": "npm install",
   "outputDirectory": "dist",
-  "functions": {
-    "vercel/api/*.ts": {
-      "memory": 1024,
-      "maxDuration": 10
-    }
-  },
-  "routes": [
-    { "src": "/api/healthcheck", "dest": "/vercel/api/healthcheck.ts" },
-    { "src": "/api/debug-db", "dest": "/vercel/api/debug-db.ts" },
-    { "src": "/api/(.*)", "dest": "/vercel/api/index.ts" },
-    { "src": "/(.*)", "dest": "/index.html" }
+  "framework": null,
+  "rewrites": [
+    { "source": "/api/healthcheck", "destination": "/vercel/api/healthcheck" },
+    { "source": "/api/debug-db", "destination": "/vercel/api/debug-db" },
+    { "source": "/api/debug", "destination": "/vercel/api/debug" },
+    { "source": "/api/detailed-debug", "destination": "/vercel/api/detailed-debug" },
+    { "source": "/api/(.*)", "destination": "/vercel/api" },
+    { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
