--- a/vercel.json
+++ b/vercel.json
@@ -1,21 +1,23 @@
 
 {
   "version": 2,
-  "buildCommand": "npm install && npm run build",
-  "installCommand": "npm install",
+  "buildCommand": "npm run build",
   "outputDirectory": "dist",
+  "framework": null,
   "functions": {
     "vercel/api/*.ts": {
       "memory": 1024,
       "maxDuration": 10
     }
   },
-  "routes": [
-    { "src": "/api/healthcheck", "dest": "/vercel/api/healthcheck.ts" },
-    { "src": "/api/debug-db", "dest": "/vercel/api/debug-db.ts" },
-    { "src": "/api/debug", "dest": "/vercel/api/debug.ts" },
-    { "src": "/api/detailed-debug", "dest": "/vercel/api/detailed-debug.ts" },
-    { "src": "/api/(.*)", "dest": "/vercel/api/index.ts" },
-    { "src": "/(.*)", "dest": "/index.html" }
+  "rewrites": [
+    {
+      "source": "/api/(.*)",
+      "destination": "/api/$1"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
   ]
 }
