--- a/vercel.json
+++ b/vercel.json
@@ -1,23 +1,11 @@
-
 {
-  "version": 2,
-  "buildCommand": "npm run build",
+  "buildCommand": "npm install -g vite && npm run build",
   "outputDirectory": "dist",
-  "framework": null,
-  "functions": {
-    "vercel/api/*.ts": {
-      "memory": 1024,
-      "maxDuration": 10
-    }
-  },
+  "framework": "vite",
   "rewrites": [
     {
-      "source": "/api/(.*)",
-      "destination": "/api/$1"
-    },
-    {
       "source": "/(.*)",
-      "destination": "/index.html"
+      "destination": "/api"
     }
   ]
 }
