--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "tsx server/index.ts",
-    "build": "vite build && mkdir -p netlify/functions && esbuild server/index.ts netlify/functions/api.js --platform=node --packages=external --bundle --format=esm --outdir=dist",
+    "build": "vite build && npm run build:functions",
+    "build:functions": "mkdir -p netlify/functions && esbuild server/index.ts netlify/functions/api.js --platform=node --packages=external --bundle --format=esm --outdir=dist/functions",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push"
