Assistant checkpoint: Fix Netlify deployment configuration
Assistant generated file changes:
- netlify/functions/api.js: Create Netlify function handler
- package.json: Update build script for Netlify compatibility
- netlify.toml: Optimize Netlify configuration
- .nvmrc: Add Node.js version for Netlify

---

User prompt:

analyse the whole folders, and see if anything else could cause issues to deployment on netlify

--- a/netlify.toml
+++ b/netlify.toml
@@ -18,8 +18,10 @@
   to = "/index.html"
   status = 200
 
-# Handle 404 errors for missing files like favicon.ico
+# Headers for caching and security
 [[headers]]
   for = "/*"
     [headers.values]
     Cache-Control = "public, max-age=0, must-revalidate"
+    X-Frame-Options = "DENY"
+    X-XSS-Protection = "1; mode=block"
